--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>W.Noticias</title>
 </head>
 <body>
-    <header>
+    <header class="header-moble">
         <img src="./assets/images/logo.svg" alt="logo site de noticias">
 
         <button>
@@ -26,7 +27,7 @@
         </section>
 
         <section>
-            <h2>Novo</h2>
+            <h2>News</h2>
             <div>
                 <h3>Hidrogênio VS Carros Elétricos</h3>
                 <p>Os carros movidos a hidrogênio alguma vez alcançarão os veículos elétricos?</p>    
