Criacao da navegacao mobile

--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
         </button>
     </header>
 
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Novo</a>
+            <a href="#">Popular</a>
+            <a href="#">Trending</a>
+            <a href="#">Categoria</a>
+
+        </nav>
+
     <main>
         <section class="primeira-secao">
             <img src="./assets/images/image-web-3-mobile.jpg" alt="icone colorido">
