Estilizacao no nav mobile

--- a/index.html
+++ b/index.html
@@ -11,16 +11,21 @@
     <link rel="stylesheet" href="style.css">
     <title>W.Noticias</title>
 </head>
-<body>
-    <header class="header-moble">
+<body class="menu-open">
+    <header class="header-mobile">
         <img src="./assets/images/logo.svg" alt="logo site de noticias">
 
         <button>
             <img src="./assets/images/icon-menu.svg" alt="icone do menu">
         </button>
-    </header>
-
+        
         <nav>
+
+            <button>
+                <img src="assets/images/icon-menu-close.svg" alt="icone de X para fechar o menu">
+            </button>
+
+
             <a href="#">Home</a>
             <a href="#">Novo</a>
             <a href="#">Popular</a>
@@ -28,6 +33,8 @@
             <a href="#">Categoria</a>
 
         </nav>
+
+    </header>
 
     <main>
         <section class="primeira-secao">
