--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-
+    
     <link rel="stylesheet" href="style.css">
+    <script src="./script.js" defer></script>
     <title>W.Noticias</title>
 </head>
-<body class="menu-open">
+<body class="escurecer">
     <header class="header-mobile">
         <img src="./assets/images/logo.svg" alt="logo site de noticias">
 
@@ -19,12 +20,10 @@
             <img src="./assets/images/icon-menu.svg" alt="icone do menu">
         </button>
         
-        <nav>
-
+        <nav class="abrir">
             <button>
                 <img src="assets/images/icon-menu-close.svg" alt="icone de X para fechar o menu">
             </button>
-
 
             <a href="#">Home</a>
             <a href="#">Novo</a>
