--- a/index.html
+++ b/index.html
@@ -54,9 +54,11 @@
 
             <h1>O futuro brilhante da Web 3.0</h1>
 
-            <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
-            <button>Ler mais</button>
+            <div>
+                <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
+                <button>Ler mais</button>
 
+            </div>
         </section>
 
         <section class="segunda-secao">
