--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                 <img src="./assets/images/image-retro-pcs.jpg" alt="imagem de computador antigo">
                 <div>
                     <strong>01</strong>
-                    <h2>Revivendo PCs antigos</h2>
+                    <a href="#">
+                        <h2>Revivendo PCs antigos</h2>
+                    </a>
                     <p>E se PCs antigos pudessem receber peças modernas?</p>
                 </div>
             </div>
@@ -91,7 +93,9 @@
                 <img src="./assets/images/image-top-laptops.jpg" alt="imagem laptop">
                 <div>
                     <strong>02</strong>
-                    <h2>Top 10 Laptops de 2024</h2>
+                    <a href="#">
+                        <h2>Top 10 Laptops de 2024</h2
+                    </a>
                     <p>Nossas melhores escolhas para diversas necessidades.</p>
                 </div>
             </div>
@@ -100,7 +104,9 @@
                 <img src="./assets/images/image-gaming-growth.jpg" alt="controle de video game">
                 <div>
                     <strong>03</strong>
-                    <h2>O Crescimento dos Jogos</h2>
+                    <a href="#">
+                        <h2>O Crescimento dos Jogos</h2>
+                    </a>
                     <p>Como a pandemia tem gerado novas oportunidades.</p>
                 </div>
 
