--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <div>
                     <strong>02</strong>
                     <a href="#">
-                        <h2>Top 10 Laptops de 2024</h2
+                        <h2>Top 10 Laptops de 2024</h2>
                     </a>
                     <p>Nossas melhores escolhas para diversas necessidades.</p>
                 </div>
